--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,18 @@
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
+    <script src="http://www.parsecdn.com/js/parse-1.6.7.min.js"></script>
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
+      <form>
+        <input type="text" placeholder="username"></input>
+        <textarea></textarea>
+        <input type="submit">
+      </form>
       <!-- Your HTML goes here! -->
     </div>
   </body>
