--- a/client/index.html
+++ b/client/index.html
@@ -9,19 +9,71 @@
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
-    <script src="http://www.parsecdn.com/js/parse-1.6.7.min.js"></script>
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <form>
-        <input type="text" placeholder="username"></input>
-        <textarea></textarea>
-        <input type="submit">
+
+      <div class="spinner">
+        <img src="images/spiffygif_46x46.gif"/>
+      </div>
+
+      <div id="rooms">
+        Room:
+        <select id="roomSelect">
+        </select>
+      </div>
+
+      <form action="#" id="send" method="post">
+        <input type="text" name="message" id="message" />
+        <input type="submit" name="submit" class="submit" />
       </form>
+
+      <div id="chats">
+      </div>
+      
       <!-- Your HTML goes here! -->
     </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<!doctype html>-->
+<!--<html>-->
+<!--  <head>-->
+<!--    <meta charset="utf-8">-->
+<!--    <title>chatterbox</title>-->
+<!--    <link rel="stylesheet" href="styles/styles.css">-->
+
+    <!-- dependencies -->
+<!--    <script src="bower_components/jquery/jquery.min.js"></script>-->
+<!--    <script src="bower_components/underscore/underscore-min.js"></script>-->
+    <!-- your scripts -->
+<!--    <script src="http://www.parsecdn.com/js/parse-1.6.7.min.js"></script>-->
+<!--    <script src="env/config.js"></script>-->
+<!--    <script src="scripts/app.js"></script>-->
+<!--  </head>-->
+<!--  <body>-->
+<!--    <div id="main">-->
+<!--      <h1>chatterbox</h1>-->
+<!--      <form>-->
+<!--        <input type="text" placeholder="username"></input>-->
+<!--        <textarea></textarea>-->
+<!--        <input type="submit">-->
+<!--      </form>-->
+      <!-- Your HTML goes here! -->
+<!--    </div>-->
+<!--  </body>-->
+<!--</html>-->
