--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
+    <script>
+      $(document).ready(function() { app.init(); });
+    </script>
   </head>
   <body>
     <div id="main">
@@ -38,42 +41,3 @@
     </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<!doctype html>-->
-<!--<html>-->
-<!--  <head>-->
-<!--    <meta charset="utf-8">-->
-<!--    <title>chatterbox</title>-->
-<!--    <link rel="stylesheet" href="styles/styles.css">-->
-
-    <!-- dependencies -->
-<!--    <script src="bower_components/jquery/jquery.min.js"></script>-->
-<!--    <script src="bower_components/underscore/underscore-min.js"></script>-->
-    <!-- your scripts -->
-<!--    <script src="http://www.parsecdn.com/js/parse-1.6.7.min.js"></script>-->
-<!--    <script src="env/config.js"></script>-->
-<!--    <script src="scripts/app.js"></script>-->
-<!--  </head>-->
-<!--  <body>-->
-<!--    <div id="main">-->
-<!--      <h1>chatterbox</h1>-->
-<!--      <form>-->
-<!--        <input type="text" placeholder="username"></input>-->
-<!--        <textarea></textarea>-->
-<!--        <input type="submit">-->
-<!--      </form>-->
-      <!-- Your HTML goes here! -->
-<!--    </div>-->
-<!--  </body>-->
-<!--</html>-->
